Fix similar books relationship
